src/sass/style.scss
@use './_modules/modal.scss';
@use './_modules/login-menu.scss';

body {
  margin: 0;
  padding: 0;
}

.no-scroll {
    height: 100hv;
    padding-right: 15px;
    overflow: hidden;
}

.header-section {
    width: calc(50% - 57px);
    display: flex;
    align-items: center;

    &--right {
        justify-content: flex-end;
    }
}

.header.ant-layout-header {
    background: #9395D3;
    display: flex;
    justify-content: space-around;
}

.ant-input-group-wrapper.search-input {
    max-width: 15vw;
    margin-top: 1%;
}

.mainLogo {
    cursor: pointer;
}

.site-layout.ant-layout-content  {
    display: flex;
    justify-content: center;
    width: 100%;
    min-height: 84vh; 
    background: #FBF9FF;    
}

.countryCards {
    margin: 1rem 0;
    display: grid;
    grid-template: repeat(2, 1fr) / repeat(4, 1fr);
    gap: 20px;
}

.countryCard {
    padding-top: 25%;
    position: relative;
}

.text {
    background-color: #5e6ad3;
    color: white;
    font-size: 16px;
    padding: 16px 16px;
  }

.cardHover {
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    text-align: center;
    transition: .5s ease;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    cursor: pointer;
}

.countryImage {
    opacity: 1;
    border-radius: 10px;
    border: none;
    outline: none;
    transition: .5s ease;
    backface-visibility: hidden;
    cursor: pointer;
}

.countryCard:hover .countryImage {
    opacity: 0.3;
}

.countryCard:hover .cardHover {
    opacity: 1;
}

.footer.ant-layout-footer {
    padding: 25px 50px;
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 100%;
    background: #B3B7EE;    
}

.footer {
    a {
        display: flex;
        align-items: center;
    }
}

